app/assets/stylesheets/home.scss
.navbared{

	min-height: 62px;
	padding-top: 10px;
	background-color: #182634;
	padding-left: 15px;
	padding-right: 20px;

}

.all-peegin{
	margin-top: 130px;
}
.altered{
	margin-top: 109px;
	margin-bottom: -100px;

}

.alert-notice{
	background-color: #dff0d8;
	border-color: #d6e9c6;
	color: #3c763d;
}

.alert-alert{
	background-color: #f0d8d8;
	border-color: #e9c6c6;
	color: #763c3c;
}

div.col-sm-2{
	width: 10.2%;
}

.input-group{
	width: 74%;
	float: right;
	margin-top: -4px;
}

.search-mobile{
	width: 90%;
	margin-right: 40px;
	margin-bottom: 30px;
	margin-top: 5px;
}

.navbar-btn{

	margin-top: 3px;
	margin-bottom: 0px
}

.btns{

	margin-left: 10px;
}

.btn1{

	margin-right: 0px;
}

.side-bar,.titled{

	font-weight: 900;
	font-size: 26px;
	line-height:1.45;
	display: inline;
	font-family: 'Lora', serif;
}
#side,.titled{
	background-color: #FAD93D;
}
.ui-mobile{
	margin-top: -6px;
	margin-bottom: 8px;
	float: right;
}

body{

	background-color: #f1f1f1;

}

a {
	text-decoration: none !important;

	color: #02a882;

}

.button-link{

}

.create-peegin{
	background-color: #182634;
	margin-top: 10px;
	font-size: 1em;
	border-color: #182634;
}


.side-panel{
	background-color: #02a882;


}
.described{
	font-size: 18px;
}
.exampled{

	font-style: italic;
}

.peegined{
	padding: 0 20px;
}

.socialed{
	display: inline;
	float: right;
	margin-left: 30px;
}

.haterz{
	display: inline;
	float: left;
	margin-right: 20px;
}


.hate{

	margin-left: -20px;
}

.score{
margin-left: 8px;
color: #02a882 !important;

}

.modal-backdrop.in { z-index: auto;}

.modal-header{
	text-align: center;

}


.modal-title{

	color: #182634;
}


.btn-primary,.btn-default:hover {
	border-color: #3a434c;
	background-color: #3a434c;
}



input[type=text],[type=email],[type=password] {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
}

.search-margin{
	margin: 8px
}
textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    background-color: #f8f8f8;
    resize: none;
}

.devise-share{
	margin-top: 50px;
}

.dropdown-menu{
	right: -80px !important;
	left: auto;
	height: 100px;
	min-width: 200px;
	text-align: center;
	border: 1px solid rgba(0, 0, 0, 0);
	padding: 15px 0;
	background-color: #d8d8d8;
}

.mobile-drop{
	left: -80px;
	text-align: center;
	}

.pagination > .active > span {
	background-color: #02a882;
	border-color: #02a882;
}

.pagination > li > a {
	color: #02a882;
}

.pagination > li > a:hover {
color: #182634;
}

.pagination > .active > span, .pagination > .active > span:hover{
	background-color: #182634;
	border-color: #182634;
}


@media only screen and (max-width: 768px)
and (max-width : 982px){

  .all-peegin {
  	margin-top: 208px;
  }

  .socialed {
  	margin-top: -25px;
  }
	.altered{
		margin-top: 179px;
		margin-bottom: -100px;

	}

}

@media (max-width : 991px){

  .all-peegin {
  	margin-top: 208px;
  }

  .socialed {
  	margin-top: -25px;
  }

	.container {
		width: 95%;
	}

	.altered{
		margin-top: 189px;
		margin-bottom: -150px;

	}

}

